@@ -1,3 +1,8 @@
+2009-12-04  Per Bothner  <per@bothner.com>
+
+	* lang/SyntaxForm.java (toString): Better debugging output.
+	* lang/TemplateScope.java (toString): Also print Syntax object.
+
 2009-12-02  Per Bothner  <per@bothner.com>
 
 	* standard/object.java (rewriteClassDef): Fix previous change so we
